Update my_town_detail_functional.md